--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cats",
+  "name": "fake-store-api",
   "type": "module",
   "version": "1.0.0",
   "description": "",
@@ -22,6 +22,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "session": "^0.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
